# java-pocs

./: .gitignore  .gitmodules  README.md
Adendo-Curso-Spring/: .classpath  .deployment  .project
Adendo-Curso-Spring-JSF/: .classpath  .project
Android-testTest/: .project  AndroidManifest.xml
Apache-Curator-Playground/: .project  pom.xml
Atomix-Fun/: .classpath  .project
Esper-Fun/: .project  build.gradle
Exercicios-Spring-Framework/: .classpath
FAST-taining/: .classpath  .project
Fluent-Interface/: .project
HystrixFun/: .project
JMS-ActiveMQ/: ActiveMQDestinations.dot
Java8-samples/: .classpath
LombokFun/: .project
MBassador-fun/: .classpath
Spring-Integration/: .classpath
activemq-web-ajax-rest/: pom.xml
apache-cxf-jbossas5-camel/: .classpath  .project  pom.xml
archunit-fun/: .classpath  build.gradle
astra-java-driver-fun/: pom.xml
awaitility/: .project
aws-java-ips/: .classpath
aws-s3-fun/: build.gradle
aws-sqs-fun/: build.gradle
aws-xray-fun/: .classpath  .project  build.gradle
aws-xray-playground/: .classpath
baratine-pojo-microservices/: .classpath
buildr/: .project  buildfile.rb
bytebuddy-fun/: .classpath  .project  build.gradle
cache-playground/: .project
cxf-fun/: .project  (+2 more)
pocs/java21-bazel/: .bazelproject  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  build.sh  run.sh
pocs/java21-bazel/src/main/java/com/github/diegopacheco/javabazel/: ProjectRunner.java
pocs/server-benchmarks-fun/rust-actix/rust-actix/: Cargo.toml  README.md  run.sh
pocs/server-benchmarks-fun/rust-actix/rust-actix/src/: main.rs
(+7266 files in other folders)
