[package]
name = "rust-actix"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]